[package]
name = "merkle-lite"
# When publishing a new version:
# - Update CHANGELOG.md
version = "0.1.0"
edition = "2021"
rust-version = "1.61"
authors = ["Keith Noguchi <keith@noguchi.us>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/keithnoguchi/merkle-lite"
repository = "https://github.com/keithnoguchi/merkle-lite"
documentation = "https://docs.rs/merkle-lite"
keywords = ["crypto", "merkle", "merkle-tree", "no-std"]
categories = ["data-structures", "cryptography", "no-std"]
description = "A simple, fast, and composable binary Merkle tree and proof for Rust Crypto hash functions"

[dependencies]
digest = "0.10.6"

[dev-dependencies]
bencher = "0.1"
clap = { version = "4", features = ["derive"] }
fastrand = "1"
hex-literal = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
sha3 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bench]]
name = "tree_from_iter"
harness = false

[[bench]]
name = "tree_get_leaves_mut"
harness = false

[[bench]]
name = "tree_proof"
harness = false

[[bench]]
name = "proof_verify"
harness = false
